[gd_scene load_steps=17 format=2]

[ext_resource path="res://Prototype Sprites/launch-prototype.png" type="Texture" id=1]
[ext_resource path="res://Boulder/Boulder.tscn" type="PackedScene" id=2]
[ext_resource path="res://Terrain/SlopeGentle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Flight/Flight.gd" type="Script" id=4]
[ext_resource path="res://UI/ScoreModal.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prototype Sprites/player-prototype.png" type="Texture" id=6]
[ext_resource path="res://Flight/Platform.tscn" type="PackedScene" id=7]
[ext_resource path="res://Terrain/SlopeModerate.tscn" type="PackedScene" id=8]
[ext_resource path="res://Terrain/Flat.tscn" type="PackedScene" id=9]
[ext_resource path="res://Terrain/Valley1.tscn" type="PackedScene" id=10]
[ext_resource path="res://Terrain/SlopeSteep.tscn" type="PackedScene" id=11]
[ext_resource path="res://Terrain/Cave1.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/FlightBottomBar.tscn" type="PackedScene" id=13]
[ext_resource path="res://Terrain/Lava.tscn" type="PackedScene" id=14]
[ext_resource path="res://Terrain/SteepestSlope.tscn" type="PackedScene" id=15]
[ext_resource path="res://Terrain/EndingSlope.tscn" type="PackedScene" id=16]

[node name="Flight" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 389.0 ],
"_edit_vertical_guides_": [ 1023.0 ]
}

[node name="FlightBottomBar" parent="." instance=ExtResource( 13 )]

[node name="Boulder" parent="." instance=ExtResource( 2 )]
position = Vector2( -1215, 459 )

[node name="Camera2D" type="Camera2D" parent="Boulder"]
position = Vector2( 1, 2 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.4
drag_margin_top = 0.4
drag_margin_right = 0.4
drag_margin_bottom = 0.4

[node name="BouncePlayer" type="AudioStreamPlayer2D" parent="Boulder"]

[node name="Launch" type="Node2D" parent="."]
position = Vector2( -1521, -39 )
z_index = -1

[node name="Background" type="Sprite" parent="Launch"]
texture = ExtResource( 1 )
centered = false

[node name="Player" type="Sprite" parent="Launch"]
position = Vector2( 256, 476 )
z_index = 1
texture = ExtResource( 6 )

[node name="PrimarySlope" type="StaticBody2D" parent="Launch"]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Launch/PrimarySlope"]
polygon = PoolVector2Array( 0, 463, 764, 463, 1024, 400, 1024, 600, 0, 600 )
one_way_collision = true

[node name="BackupZones" type="StaticBody2D" parent="Launch"]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Launch/BackupZones"]
polygon = PoolVector2Array( 764, 464, 764, 582, -89, 583, -89, 281, -21, 281, -22, 524, 738, 532, 738, 465 )

[node name="ScoreScreen" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Platform" parent="." instance=ExtResource( 7 )]
position = Vector2( -1246, 464 )
z_index = -1

[node name="Terrain" type="Node2D" parent="."]

[node name="Flat" parent="Terrain" instance=ExtResource( 9 )]
position = Vector2( -305, 361 )

[node name="Gentle" parent="Terrain" instance=ExtResource( 3 )]
position = Vector2( 79, 361 )

[node name="Moderate" parent="Terrain" instance=ExtResource( 8 )]
position = Vector2( 463, 330 )

[node name="Moderate2" parent="Terrain" instance=ExtResource( 8 )]
position = Vector2( 847, 266 )

[node name="Steep" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 1615, 203 )

[node name="Valley" parent="Terrain" instance=ExtResource( 10 )]
position = Vector2( 1231, 234 )

[node name="Cave" parent="Terrain" instance=ExtResource( 12 )]
position = Vector2( 2575, 29 )

[node name="Moderate3" parent="Terrain" instance=ExtResource( 8 )]
position = Vector2( 1999, 140 )

[node name="Gentle2" parent="Terrain" instance=ExtResource( 3 )]
position = Vector2( 2383, 76 )

[node name="Flat2" parent="Terrain" instance=ExtResource( 9 )]
position = Vector2( 3151, 45 )

[node name="Moderate4" parent="Terrain" instance=ExtResource( 8 )]
position = Vector2( 3535, 46 )

[node name="Steep2" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 3919, -49 )

[node name="Steep3" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 4303, -144 )

[node name="Steep4" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 4686, -239 )

[node name="Moderate5" parent="Terrain" instance=ExtResource( 8 )]
position = Vector2( 5067, -302 )

[node name="Moderate6" parent="Terrain" instance=ExtResource( 8 )]
position = Vector2( 5451, -301 )
scale = Vector2( -1, 1 )

[node name="Lava" parent="Terrain" instance=ExtResource( 14 )]
position = Vector2( 5643, -382 )

[node name="Steep5" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 6345, -315 )

[node name="Gentle3" parent="Terrain" instance=ExtResource( 3 )]
position = Vector2( 6727, -379 )

[node name="Flat3" parent="Terrain" instance=ExtResource( 9 )]
position = Vector2( 7111, -411 )

[node name="Gentle4" parent="Terrain" instance=ExtResource( 3 )]
position = Vector2( 7495, -411 )

[node name="Moderate7" parent="Terrain" instance=ExtResource( 8 )]
position = Vector2( 7876, -442 )

[node name="Steep6" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 8259, -537 )

[node name="SteepestSlope" parent="Terrain" instance=ExtResource( 15 )]
position = Vector2( 8448, -1112 )

[node name="Moderate8" parent="Terrain" instance=ExtResource( 8 )]
position = Vector2( 9663, -1191 )

[node name="Steep8" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 10047, -1286 )

[node name="Steep7" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 8896, -1065 )

[node name="Moderate9" parent="Terrain" instance=ExtResource( 8 )]
position = Vector2( 9280, -1128 )

[node name="Steep9" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 10430, -1381 )

[node name="Steep12" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 11577, -1666 )

[node name="Steep11" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 11195, -1571 )

[node name="Steep10" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 10812, -1476 )

[node name="Steep13" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 11960, -1761 )

[node name="Steep14" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 12342, -1856 )

[node name="Steep15" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 12725, -1951 )

[node name="Moderate10" parent="Terrain" instance=ExtResource( 8 )]
position = Vector2( 13108, -2014 )

[node name="Steep16" parent="Terrain" instance=ExtResource( 11 )]
position = Vector2( 13491, -2109 )

[node name="EndingSlope" parent="Terrain" instance=ExtResource( 16 )]
position = Vector2( 13810, -2686 )

[node name="Filler" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Filler"]
margin_left = -497.0
margin_top = 425.0
margin_right = 2579.0
margin_bottom = 798.0
color = Color( 0.262745, 0.196078, 0.14902, 1 )

[node name="ColorRect2" type="ColorRect" parent="Filler"]
margin_left = 267.0
margin_top = 343.0
margin_right = 2577.0
margin_bottom = 485.0
color = Color( 0.262745, 0.196078, 0.14902, 1 )

[node name="ColorRect3" type="ColorRect" parent="Filler"]
margin_left = 650.0
margin_top = 298.0
margin_right = 2576.0
margin_bottom = 438.0
color = Color( 0.262745, 0.196078, 0.14902, 1 )

[node name="ColorRect4" type="ColorRect" parent="Filler"]
margin_left = 1422.0
margin_top = 245.0
margin_right = 2579.0
margin_bottom = 462.0
color = Color( 0.262745, 0.196078, 0.14902, 1 )

[node name="ColorRect5" type="ColorRect" parent="Filler"]
margin_left = 1921.0
margin_top = 128.0
margin_right = 2578.0
margin_bottom = 382.0
color = Color( 0.262745, 0.196078, 0.14902, 1 )

[node name="ColorRect6" type="ColorRect" parent="Filler"]
margin_left = 1797.0
margin_top = 187.0
margin_right = 1942.0
margin_bottom = 362.0
color = Color( 0.262745, 0.196078, 0.14902, 1 )
